Cursor hand, dropshadow and removed split divider

--- a/src/main/DetailedView/DetailedView.fxml
+++ b/src/main/DetailedView/DetailedView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="820.0" style="-fx-background-color: #F5FFFF;" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="820.0" style="-fx-background-color: #F5FFFF;" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="productImage" fitHeight="200.0" fitWidth="220.0" layoutX="14.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="35.0" />
       <Label fx:id="productNameLabel" layoutX="301.0" layoutY="17.0" prefHeight="70.0" prefWidth="447.0" text="Varunamn" AnchorPane.topAnchor="17.0">
@@ -32,20 +32,20 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="increaseButton" layoutX="413.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#increaseQuantity" prefHeight="45.0" prefWidth="45.0" text="+" />
-      <Button fx:id="decreaseButton" layoutX="303.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#decreaseQuantity" prefHeight="45.0" prefWidth="45.0" text="-" />
+      <Button fx:id="increaseButton" layoutX="413.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#increaseQuantity" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="+" />
+      <Button fx:id="decreaseButton" layoutX="303.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#decreaseQuantity" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="-" />
       <Label layoutX="67.0" layoutY="270.0" text="Produktinformation:">
          <font>
             <Font name="System Italic" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="addButton" layoutX="302.0" layoutY="209.0" mnemonicParsing="false" onMouseClicked="#addToShoppingCart" prefHeight="53.0" prefWidth="157.0" text="Köp" />
-      <TextArea fx:id="productTextArea" layoutX="67.0" layoutY="323.0" prefHeight="152.0" prefWidth="613.0" text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. " wrapText="true">
+      <Button fx:id="addButton" layoutX="302.0" layoutY="209.0" mnemonicParsing="false" onMouseClicked="#addToShoppingCart" prefHeight="53.0" prefWidth="157.0" styleClass="cursor-hand" text="Köp" />
+      <TextArea fx:id="productTextArea" layoutX="67.0" layoutY="323.0" prefHeight="152.0" prefWidth="613.0" styleClass="cursor-text" text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. " wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
       </TextArea>
-      <Button fx:id="exitButton" layoutX="761.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#closeDetailedView" prefHeight="45.0" prefWidth="45.0" text="Exit" />
+      <Button fx:id="exitButton" layoutX="761.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#closeDetailedView" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="Exit" />
       <Label fx:id="unitSuffixLabel" layoutX="384.0" layoutY="164.0" text="st">
          <font>
             <Font size="18.0" />
@@ -57,7 +57,7 @@
          </image>
       </ImageView>
       <Line endX="180.0" layoutX="400.0" layoutY="148.0" startX="-100.0" />
-      <ImageView fx:id="favouriteImage" fitHeight="65.0" fitWidth="65.0" layoutX="615.0" layoutY="20.0" onMouseClicked="#onFavouriteClicked" onMouseEntered="#onFavouriteEnter" onMouseExited="#onFavouriteExit" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="favouriteImage" fitHeight="65.0" fitWidth="65.0" layoutX="615.0" layoutY="20.0" onMouseClicked="#onFavouriteClicked" onMouseEntered="#onFavouriteEnter" onMouseExited="#onFavouriteExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
          <image>
             <Image url="@../Res/Images/favourite.png" />
          </image>
