--- a/src/main/HomePage.fxml
+++ b/src/main/HomePage.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
@@ -24,8 +25,8 @@
             <Pane prefHeight="101.0" prefWidth="960.0" style="-fx-background-color: #037C99;" BorderPane.alignment="CENTER">
                <children>
                   <Button layoutX="801.0" layoutY="12.0" mnemonicParsing="false" onMouseClicked="#onCustomerSupportPressed" prefHeight="64.0" prefWidth="123.0" text="Button" />
-                  <TextField fx:id="searchBarTextField" layoutX="164.0" layoutY="32.0" onKeyPressed="#searchBarKeyPressed" prefHeight="25.0" prefWidth="562.0" text="Sök miljontals varor..." />
-                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" layoutX="3.0" layoutY="1.0" onMouseClicked="#onHomeButtonPressed" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" x="26.0">
+                  <TextField fx:id="searchBarTextField" layoutX="164.0" layoutY="32.0" onKeyPressed="#searchBarKeyPressed" prefHeight="25.0" prefWidth="562.0" styleClass="cursor-text" text="Sök miljontals varor..." />
+                  <ImageView fx:id="escapeHatchImage" fitHeight="98.0" fitWidth="105.0" onMouseClicked="#onHomeButtonPressed" onMouseEntered="#onEscapeHatchEnter" onMouseExited="#onEscapeHatchExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand" x="26.0">
                      <image>
                         <Image url="@Res/Images/escape_hatch.png" />
                      </image>
@@ -38,16 +39,56 @@
                <children>
                   <Pane layoutX="4.0" layoutY="30.0" prefHeight="578.0" prefWidth="149.0" styleClass="border">
                      <children>
-                        <Button fx:id="favouritesButton" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#onFavouritesButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Mina favoriter" />
-                        <Button fx:id="offersButton" layoutX="10.0" layoutY="126.0" mnemonicParsing="false" onMouseClicked="#onOffersButtonPressed" prefHeight="44.0" prefWidth="125.0" style="-fx-background-size: 100;" styleClass="categoryButtons" text="Erbjudanden" />
-                        <Button fx:id="meatAndFishButton" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" onMouseClicked="#onMeatAndFishButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Kött &amp; Fisk" />
-                        <Button fx:id="veggiesButton" layoutX="10.0" layoutY="243.0" mnemonicParsing="false" onMouseClicked="#onVeggiesButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Frukt &amp; Grönt" />
-                        <Button fx:id="drinkButton" layoutX="10.0" layoutY="287.0" mnemonicParsing="false" onMouseClicked="#onDrinkButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Dryck" />
-                        <Button fx:id="dairyButton" layoutX="10.0" layoutY="331.0" mnemonicParsing="false" onMouseClicked="#onDairyButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Mejeri" />
-                        <Button fx:id="pantryButton" layoutX="10.0" layoutY="375.0" mnemonicParsing="false" onMouseClicked="#onPantryButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Skafferi" />
-                        <Button fx:id="spicesButton" layoutX="10.0" layoutY="464.0" mnemonicParsing="false" onMouseClicked="#onSpicesButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Kryddor" />
-                        <Button fx:id="snacksButton" layoutX="10.0" layoutY="419.0" mnemonicParsing="false" onMouseClicked="#onSnacksButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Snacks" />
-                        <Button fx:id="breadButton" layoutX="10.0" layoutY="508.0" mnemonicParsing="false" onMouseClicked="#onBreadButtonPressed" prefHeight="44.0" prefWidth="125.0" styleClass="categoryButtons" text="Bröd" />
+                        <Button fx:id="favouritesButton" layoutX="10.0" layoutY="82.0" mnemonicParsing="false" onMouseClicked="#onFavouritesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Mina favoriter">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="offersButton" layoutX="10.0" layoutY="126.0" mnemonicParsing="false" onMouseClicked="#onOffersButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Erbjudanden">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="meatAndFishButton" layoutX="10.0" layoutY="199.0" mnemonicParsing="false" onMouseClicked="#onMeatAndFishButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Kött &amp; Fisk">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="veggiesButton" layoutX="10.0" layoutY="243.0" mnemonicParsing="false" onMouseClicked="#onVeggiesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Frukt &amp; Grönt">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="drinkButton" layoutX="10.0" layoutY="287.0" mnemonicParsing="false" onMouseClicked="#onDrinkButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Dryck">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="dairyButton" layoutX="10.0" layoutY="331.0" mnemonicParsing="false" onMouseClicked="#onDairyButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Mejeri">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="pantryButton" layoutX="10.0" layoutY="375.0" mnemonicParsing="false" onMouseClicked="#onPantryButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Skafferi">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="spicesButton" layoutX="10.0" layoutY="464.0" mnemonicParsing="false" onMouseClicked="#onSpicesButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Kryddor">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="snacksButton" layoutX="10.0" layoutY="419.0" mnemonicParsing="false" onMouseClicked="#onSnacksButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Snacks">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
+                        <Button fx:id="breadButton" layoutX="10.0" layoutY="508.0" mnemonicParsing="false" onMouseClicked="#onBreadButtonPressed" prefHeight="44.0" prefWidth="125.0" text="Bröd">
+                           <styleClass>
+                              <String fx:value="categoryButtons" />
+                              <String fx:value="cursor-hand" />
+                           </styleClass></Button>
                         <ImageView fitHeight="58.0" fitWidth="135.0" layoutX="7.0" layoutY="7.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@Res/Images/KATEGORIER_header.png" />
@@ -66,7 +107,7 @@
                <children>
                   <AnchorPane layoutX="4.0" layoutY="30.0" prefHeight="577.0" prefWidth="269.0" styleClass="border">
                      <children>
-                        <Button fx:id="checkoutButton" layoutX="6.0" layoutY="494.0" mnemonicParsing="false" onMouseClicked="#onCheckoutButtonPressed" prefHeight="77.0" prefWidth="251.0" style="-fx-background-color: #32FF46;" text="Till kassan" textAlignment="CENTER">
+                        <Button fx:id="checkoutButton" layoutX="6.0" layoutY="494.0" mnemonicParsing="false" onMouseClicked="#onCheckoutButtonPressed" prefHeight="77.0" prefWidth="251.0" style="-fx-background-color: #32FF46;" styleClass="cursor-hand" text="Till kassan" textAlignment="CENTER">
                            <font>
                               <Font size="30.0" />
                            </font></Button>
@@ -97,7 +138,7 @@
                      <children>
                         <Pane prefHeight="58.0" prefWidth="569.0" style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <children>
-                              <Button fx:id="shoppingTab" alignment="CENTER" layoutX="5.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onShoppingTabSelect" prefHeight="50.0" prefWidth="132.0" styleClass="tabButtons" text="Handla">
+                              <Button fx:id="shoppingTab" alignment="CENTER" layoutX="5.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onShoppingTabSelect" prefHeight="50.0" prefWidth="132.0" text="Handla">
                                  <graphic>
                                     <ImageView fitHeight="37.0" fitWidth="32.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -108,8 +149,12 @@
                                  <font>
                                     <Font size="18.0" />
                                  </font>
+                                 <styleClass>
+                                    <String fx:value="tabButtons" />
+                                    <String fx:value="cursor-hand" />
+                                 </styleClass>
                               </Button>
-                              <Button fx:id="orderTab" alignment="CENTER" layoutX="140.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onOrderTabSelect" prefHeight="50.0" prefWidth="117.0" styleClass="tabButtons" text="Ordar">
+                              <Button fx:id="orderTab" alignment="CENTER" layoutX="140.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onOrderTabSelect" prefHeight="50.0" prefWidth="117.0" text="Ordar">
                                  <graphic>
                                     <ImageView fitHeight="37.0" fitWidth="32.0" onMouseClicked="#onOrderTabSelect" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -120,8 +165,12 @@
                                  <font>
                                     <Font size="18.0" />
                                  </font>
+                                 <styleClass>
+                                    <String fx:value="tabButtons" />
+                                    <String fx:value="cursor-hand" />
+                                 </styleClass>
                               </Button>
-                              <Button fx:id="listTab" alignment="CENTER" layoutX="260.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onListtabSelect" prefHeight="50.0" prefWidth="164.0" styleClass="tabButtons" text="Inköpslistor">
+                              <Button fx:id="listTab" alignment="CENTER" layoutX="260.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onListtabSelect" prefHeight="50.0" prefWidth="164.0" text="Inköpslistor">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -132,8 +181,12 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <styleClass>
+                                    <String fx:value="tabButtons" />
+                                    <String fx:value="cursor-hand" />
+                                 </styleClass>
                               </Button>
-                              <Button fx:id="myPageTab" alignment="CENTER" layoutX="427.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onMyPageTabSelect" prefHeight="50.0" prefWidth="136.0" styleClass="tabButtons" text="Min sida">
+                              <Button fx:id="myPageTab" alignment="CENTER" layoutX="427.0" layoutY="3.0" mnemonicParsing="false" onMouseClicked="#onMyPageTabSelect" prefHeight="50.0" prefWidth="136.0" text="Min sida">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -144,6 +197,10 @@
                                        </image>
                                     </ImageView>
                                  </graphic>
+                                 <styleClass>
+                                    <String fx:value="tabButtons" />
+                                    <String fx:value="cursor-hand" />
+                                 </styleClass>
                               </Button>
                               <Line endX="507.0" layoutX="102.0" layoutY="61.0" startX="-108.0" strokeWidth="4.0" />
                            </children>
