--- a/src/main/DetailedView/DetailedView.fxml
+++ b/src/main/DetailedView/DetailedView.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -12,41 +13,45 @@
 <fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="820.0" style="-fx-background-color: #F5FFFF;" stylesheets="@../Res/styles.css" type="AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fx:id="productImage" fitHeight="200.0" fitWidth="220.0" layoutX="14.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="40.0" AnchorPane.topAnchor="35.0" />
-      <Label fx:id="productNameLabel" layoutX="301.0" layoutY="17.0" prefHeight="70.0" prefWidth="447.0" text="Varunamn" AnchorPane.topAnchor="17.0">
+      <Label fx:id="productNameLabel" layoutX="301.0" layoutY="17.0" prefHeight="70.0" prefWidth="447.0" styleClass="san-serif" text="Varunamn" AnchorPane.topAnchor="17.0">
          <font>
             <Font size="48.0" />
          </font>
       </Label>
-      <Label fx:id="productCategoryLabel" layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="395.0" text="Kategori">
+      <Label fx:id="productCategoryLabel" layoutX="301.0" layoutY="79.0" prefHeight="27.0" prefWidth="395.0" styleClass="san-serif" text="Kategori">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label fx:id="priceLabel" layoutX="335.0" layoutY="102.0" prefHeight="53.0" prefWidth="192.0" text="X:-">
+      <Label fx:id="priceLabel" layoutX="335.0" layoutY="102.0" prefHeight="53.0" prefWidth="192.0" styleClass="san-serif" text="X:-">
          <font>
             <Font size="36.0" />
          </font>
       </Label>
-      <Label fx:id="quantityLabel" layoutX="362.0" layoutY="164.0" text="1">
+      <Label fx:id="quantityLabel" layoutX="362.0" layoutY="164.0" styleClass="san-serif" text="1">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
       <Button fx:id="increaseButton" layoutX="413.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#increaseQuantity" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="+" />
       <Button fx:id="decreaseButton" layoutX="303.0" layoutY="155.0" mnemonicParsing="false" onMouseClicked="#decreaseQuantity" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="-" />
-      <Label layoutX="67.0" layoutY="270.0" text="Produktinformation:">
+      <Label layoutX="67.0" layoutY="270.0" styleClass="san-serif" text="Produktinformation:">
          <font>
             <Font name="System Italic" size="36.0" />
          </font>
       </Label>
       <Button fx:id="addButton" layoutX="302.0" layoutY="209.0" mnemonicParsing="false" onMouseClicked="#addToShoppingCart" prefHeight="53.0" prefWidth="157.0" styleClass="cursor-hand" text="Köp" />
-      <TextArea fx:id="productTextArea" layoutX="67.0" layoutY="323.0" prefHeight="152.0" prefWidth="613.0" styleClass="cursor-text" text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. " wrapText="true">
+      <TextArea fx:id="productTextArea" layoutX="67.0" layoutY="323.0" prefHeight="152.0" prefWidth="613.0" text="Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. " wrapText="true">
          <font>
             <Font size="18.0" />
          </font>
+         <styleClass>
+            <String fx:value="cursor-text" />
+            <String fx:value="san-serif" />
+         </styleClass>
       </TextArea>
       <Button fx:id="exitButton" layoutX="761.0" layoutY="13.0" mnemonicParsing="false" onMouseClicked="#closeDetailedView" prefHeight="45.0" prefWidth="45.0" styleClass="cursor-hand" text="Exit" />
-      <Label fx:id="unitSuffixLabel" layoutX="384.0" layoutY="164.0" text="st">
+      <Label fx:id="unitSuffixLabel" layoutX="384.0" layoutY="164.0" styleClass="san-serif" text="st">
          <font>
             <Font size="18.0" />
          </font>
@@ -57,12 +62,12 @@
          </image>
       </ImageView>
       <Line endX="180.0" layoutX="400.0" layoutY="148.0" startX="-100.0" />
-      <ImageView fx:id="favouriteImage" fitHeight="65.0" fitWidth="65.0" layoutX="615.0" layoutY="20.0" onMouseClicked="#onFavouriteClicked" onMouseEntered="#onFavouriteEnter" onMouseExited="#onFavouriteExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
+      <ImageView fx:id="favouriteImage" fitHeight="65.0" fitWidth="65.0" layoutX="655.0" layoutY="20.0" onMouseClicked="#onFavouriteClicked" onMouseEntered="#onFavouriteEnter" onMouseExited="#onFavouriteExit" pickOnBounds="true" preserveRatio="true" styleClass="cursor-hand">
          <image>
             <Image url="@../Res/Images/favourite.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="65.0" fitWidth="125.0" layoutX="648.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="65.0" fitWidth="125.0" layoutX="688.0" layoutY="87.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Res/Images/favourite_input_hint.png" />
          </image>
